--- a/style (2).css
+++ b/style (2).css
@@ -1,31 +1,29 @@
 h1{
 	color: white;
 	text-align: center;
-	font-family: Times New Roman;
+	font-family: Baskerville Old Face;
 	font-size: 50px;
 }
 input{
+	margin-bottom: 30px;
 	border-radius: 20px;
 	border-color: black;
 	padding: 15px;
-	font-size: 25px;
-	background-color: black;
-	color: white;
-	margin-right: 28px;
-}
-.name:hover{
-	background-color: #210101;
-	color: black;
-	cursor: pointer;
 }
 body{
 	background: url(mcgarage.jpg)no-repeat 0 0 fixed;
+	height:100%;
 	background-size: cover;
+	background-position: fixed 
 }
 .container1{
-	padding-top: 200px;
-	margin-top: 100px;
+	margin-top: 60px;
 	margin-left: 400px;
-	height:180px;
+	height:500px;
 	width:500px;
+}
+.last:hover{
+	background-color: grey;
+	color: black;
+	cursor: pointer;
 }
