--- a/LOGIN.css
+++ b/LOGIN.css
@@ -35,3 +35,11 @@ input{
     color: black;
     margin-right:8px;
 }
+.logo{
+    width: 100px;
+    height: 100px;
+
+    position: absolute;
+    top: -80px;
+    left: calc(50% - 50px);
+}
