--- a/LOGIN.css
+++ b/LOGIN.css
@@ -23,8 +23,11 @@ button {
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  width: 100%;
+  width: 50%;
+  margin-top: 30px;
+  margin-left: 350px;
   opacity: 0.9;
+  font-size: 15px;
 }
 
 button:hover {
